--- a/bib/citations.bib
+++ b/bib/citations.bib
@@ -19,7 +19,8 @@
   pages={3886--3895},
   publisher={PMLR},
   presort={01},
-  rmdnote={pdf=http://proceedings.mlr.press/v97/li19i.html}
+  rmdnote={pdf=http://proceedings.mlr.press/v97/li19i.html},
+  ranknote={astar}
 }
 
 @inproceedings{li2019truth,
@@ -30,7 +31,8 @@
   series={WWW},
   pages={1028--1038},
   presort={02},
-  rmdnote={full=http://arxiv.org/abs/1902.08918;pub=https://doi.org/10.1145/3308558.3313459}
+  rmdnote={full=http://arxiv.org/abs/1902.08918;pub=https://doi.org/10.1145/3308558.3313459},
+  ranknote={astar}
 }
 
 @inproceedings{roohi2019differentiallyprivate,
@@ -41,7 +43,8 @@
   series={INFOCOM},
   pages={2233--2241},
   presort={03},
-  rmdnote={full=https://arxiv.org/abs/1901.05562;pub=https://doi.org/10.1109/INFOCOM.2019.8737405}
+  rmdnote={full=https://arxiv.org/abs/1901.05562;pub=https://doi.org/10.1109/INFOCOM.2019.8737405},
+  ranknote={astar}
 }
 
 @inproceedings{alfeld2019attacking,
@@ -52,7 +55,8 @@
   pages={3167--3174},
   year={2019},
   presort={04},
-  rmdnote={pub=https://aaai.org/ojs/index.php/AAAI/article/view/4183}
+  rmdnote={pub=https://aaai.org/ojs/index.php/AAAI/article/view/4183},
+  ranknote={astar}
 }
 
 @inproceedings{fanaeepour2018histogramming,
@@ -65,7 +69,8 @@
   pages={1204--1207},
   organization={IEEE},
   presort={01},
-  rmdnote={full=https://arxiv.org/abs/1702.05607;pub=http://doi.ieeecomputersociety.org/10.1109/ICDE.2018.00111}
+  rmdnote={full=https://arxiv.org/abs/1702.05607;pub=http://doi.ieeecomputersociety.org/10.1109/ICDE.2018.00111},
+  ranknote={astar}
 }
 
 @inproceedings{han2018reinforcement,
@@ -77,7 +82,8 @@
   year={2018},
   organization={Springer},
   presort={02},
-  rmdnote={full=https://arxiv.org/abs/1808.05770;pub=https://link.springer.com/book/10.1007/978-3-030-01554-1}
+  rmdnote={full=https://arxiv.org/abs/1808.05770;pub=https://link.springer.com/book/10.1007/978-3-030-01554-1},
+  ranknote={none}
 }
 
 @article{fanaeepour2018differentially,
@@ -91,7 +97,8 @@
   number={1},
   publisher={Springer London},
   presort={03},
-  rmdnote={pub=https://link.springer.com/article/10.1007/s10115-017-1113-6}
+  rmdnote={pub=https://link.springer.com/article/10.1007/s10115-017-1113-6},
+  ranknote={b}
 }
 
 @article{lyu2018ppfa,
@@ -104,7 +111,8 @@ volume = {14},
 number = {8},
 pages = {3733-3744},
 presort = {04},
-rmdnote={pub=https://ieeexplore.ieee.org/document/8286939/}
+rmdnote={pub=https://ieeexplore.ieee.org/document/8286939/},
+ranknote={none}
 }
 
 @book{joseph2019adversarial,
@@ -137,7 +145,8 @@ month = {Feb},
 year = {2018},
 presort={07},
 pages={452--464},
-rmdnote={pub=https://link.springer.com/chapter/10.1007/978-3-319-93040-4_36}
+rmdnote={pub=https://link.springer.com/chapter/10.1007/978-3-319-93040-4_36},
+ranknote={a}
 }
 
 @inproceedings{han2018adequacy,
@@ -162,7 +171,8 @@ rmdnote={pub=https://link.springer.com/chapter/10.1007/978-3-319-93040-4_36}
   month={Feb},
   publisher={VLDB Endowment},
   presort={01},
-  rmdnote={pdf=http://www.vldb.org/pvldb/vol10/p1322-rubinstein.pdf;full=https://arxiv.org/abs/1703.00617;code=http://git.io/OASIS}
+  rmdnote={pdf=http://www.vldb.org/pvldb/vol10/p1322-rubinstein.pdf;full=https://arxiv.org/abs/1703.00617;code=http://git.io/OASIS},
+  ranknote={astar}
 }
 
 @inproceedings{rubinstein2017painfree,
@@ -175,7 +185,8 @@ rmdnote={pub=https://link.springer.com/chapter/10.1007/978-3-319-93040-4_36}
   month={May},
   organization={PMLR},
   presort={02},
-  rmdnote={pdf=http://proceedings.mlr.press/v70/rubinstein17a/rubinstein17a.pdf;full=https://arxiv.org/abs/1706.02562;code=https://brubinstein.github.io/diffpriv}
+  rmdnote={pdf=http://proceedings.mlr.press/v70/rubinstein17a/rubinstein17a.pdf;full=https://arxiv.org/abs/1706.02562;code=https://brubinstein.github.io/diffpriv},
+  ranknote={astar}
 }
 
 @inproceedings{alda2017the,
@@ -187,7 +198,8 @@ rmdnote={pub=https://link.springer.com/chapter/10.1007/978-3-319-93040-4_36}
   month={Feb},
   pages={1705--1711},
   presort={03},
-  rmdnote={pdf=http://www.aaai.org/Conferences/AAAI/2017/PreliminaryPapers/12-Alda-14735.pdf;full=https://arxiv.org/abs/1507.04499;code=https://brubinstein.github.io/diffpriv}
+  rmdnote={pdf=http://www.aaai.org/Conferences/AAAI/2017/PreliminaryPapers/12-Alda-14735.pdf;full=https://arxiv.org/abs/1507.04499;code=https://brubinstein.github.io/diffpriv},
+  ranknote={astar}
 }
 
 @article{dimitrakakis2017differential,
@@ -200,7 +212,8 @@ rmdnote={pub=https://link.springer.com/chapter/10.1007/978-3-319-93040-4_36}
   year={2017},
   month={Mar},
   presort={04},
-  rmdnote={pdf=http://www.jmlr.org/papers/volume18/15-257/15-257.pdf}
+  rmdnote={pdf=http://www.jmlr.org/papers/volume18/15-257/15-257.pdf},
+  ranknote={astar}
 }
 
 @article{lau2017machinelearning,
@@ -214,7 +227,8 @@ rmdnote={pub=https://link.springer.com/chapter/10.1007/978-3-319-93040-4_36}
   month={Apr},
   publisher={LWW},
   presort={05},
-  rmdnote={pub=https://www.ncbi.nlm.nih.gov/pubmed/27941428}
+  rmdnote={pub=https://www.ncbi.nlm.nih.gov/pubmed/27941428},
+  ranknote={a}
 }
 
 @book{verkade2017misconceptions,
@@ -236,7 +250,8 @@ rmdnote={pub=https://link.springer.com/chapter/10.1007/978-3-319-93040-4_36}
   organization={PMLR},
   pages={297--318},
   presort={01},
-  rmdnote={pdf=http://proceedings.mlr.press/v117/fish20a/fish20a.pdf;pub=http://proceedings.mlr.press/v117/fish20a.html;full=https://arxiv.org/abs/1709.09778}
+  rmdnote={pdf=http://proceedings.mlr.press/v117/fish20a/fish20a.pdf;pub=http://proceedings.mlr.press/v117/fish20a.html;full=https://arxiv.org/abs/1709.09778},
+  ranknote={b}
 }
 
 @article{marchant2020dblink,
@@ -247,7 +262,8 @@ rmdnote={pub=https://link.springer.com/chapter/10.1007/978-3-319-93040-4_36}
   month={Sep},
   note={Accepted},
   presort={00},
-  rmdnote={full=https://arxiv.org/abs/1909.06039;code=https://github.com/ngmarchant/dblink;pub=https://amstat.tandfonline.com/doi/full/10.1080/10618600.2020.1825451}
+  rmdnote={full=https://arxiv.org/abs/1909.06039;code=https://github.com/ngmarchant/dblink;pub=https://amstat.tandfonline.com/doi/full/10.1080/10618600.2020.1825451},
+  ranknote={astar}
 }
 
 @misc{culnane2019stop,
@@ -283,7 +299,8 @@ rmdnote={pub=https://link.springer.com/chapter/10.1007/978-3-319-93040-4_36}
   year={2017},
   organization={IEEE},
   presort={08},
-  rmdnote={pdf=http://www.buyya.com/papers/E-Storm2017.pdf;pub=https://ieeexplore.ieee.org/document/8025331/}
+  rmdnote={pdf=http://www.buyya.com/papers/E-Storm2017.pdf;pub=https://ieeexplore.ieee.org/document/8025331/},
+  ranknote={a}
 }
 
 @misc{culnane2017privacy,
@@ -341,7 +358,8 @@ rmdnote={pub=https://link.springer.com/chapter/10.1007/978-3-319-93040-4_36}
   year={2016},
   month={Feb},
   presort={01},
-  rmdnote={pdf=http://www.aaai.org/ocs/index.php/AAAI/AAAI16/paper/viewFile/12129/11885;full=http://arxiv.org/abs/1512.06992}
+  rmdnote={pdf=http://www.aaai.org/ocs/index.php/AAAI/AAAI16/paper/viewFile/12129/11885;full=http://arxiv.org/abs/1512.06992},
+  ranknote={astar}
 }
 
 @inproceedings{he2016moocs,
@@ -353,7 +371,8 @@ rmdnote={pub=https://link.springer.com/chapter/10.1007/978-3-319-93040-4_36}
   year={2016},
   month={Feb},
   presort={02},
-  rmdnote={pdf=http://www.aaai.org/ocs/index.php/AAAI/AAAI16/paper/viewFile/11970/11722;full=http://arxiv.org/abs/1511.07961}
+  rmdnote={pdf=http://www.aaai.org/ocs/index.php/AAAI/AAAI16/paper/viewFile/11970/11722;full=http://arxiv.org/abs/1511.07961},
+  ranknote={astar}
 }
 
 @inproceedings{fanaeepour2016beyond,
@@ -366,7 +385,8 @@ rmdnote={pub=https://link.springer.com/chapter/10.1007/978-3-319-93040-4_36}
   month={Dec},
   organization={IEEE},
   presort={03},
-  rmdnote={full=http://arxiv.org/abs/1609.07983;pub=http://ieeexplore.ieee.org/document/7837837/;alert=Winner, WiE Best Postgraduate Student Paper, IEEE Australia Council}
+  rmdnote={full=http://arxiv.org/abs/1609.07983;pub=http://ieeexplore.ieee.org/document/7837837/;alert=Winner, WiE Best Postgraduate Student Paper, IEEE Australia Council},
+  ranknote={astar}
 }
 
 @inproceedings{alpcan2016largescale,
@@ -379,7 +399,8 @@ rmdnote={pub=https://link.springer.com/chapter/10.1007/978-3-319-93040-4_36}
   month={Dec},
   organization={IEEE},
   presort={04},
-  rmdnote={full=http://arxiv.org/abs/1609.06438;pub=http://ieeexplore.ieee.org/abstract/document/7798940/}
+  rmdnote={full=http://arxiv.org/abs/1609.06438;pub=http://ieeexplore.ieee.org/abstract/document/7798940/},
+  ranknote={a}
 }
 
 @article{han2016a,
@@ -393,7 +414,8 @@ rmdnote={pub=https://link.springer.com/chapter/10.1007/978-3-319-93040-4_36}
   month={Mar},
   publisher={IEEE},
   presort={05},
-  rmdnote={pub=http://dx.doi.org/10.1109/TIFS.2015.2505680}
+  rmdnote={pub=http://dx.doi.org/10.1109/TIFS.2015.2505680},
+  ranknote={a}
 }
 
 @inproceedings{aye2016large,
@@ -406,7 +428,8 @@ rmdnote={pub=https://link.springer.com/chapter/10.1007/978-3-319-93040-4_36}
   month={Jul},
   organization={IEEE},
   presort={06},
-  rmdnote={pub=http://ieeexplore.ieee.org/document/7727368/}
+  rmdnote={pub=http://ieeexplore.ieee.org/document/7727368/},
+  ranknote={a}
 }
 
 @inproceedings{sanchez2016fast,
@@ -419,7 +442,8 @@ rmdnote={pub=https://link.springer.com/chapter/10.1007/978-3-319-93040-4_36}
   month={Jul},
   organization={IEEE},
   presort={07},
-  rmdnote={pub=http://ieeexplore.ieee.org/document/7727674/}
+  rmdnote={pub=http://ieeexplore.ieee.org/document/7727674/},
+  ranknote={a}
 }
 
 @inproceedings{milligan2016validity,
@@ -432,7 +456,8 @@ rmdnote={pub=https://link.springer.com/chapter/10.1007/978-3-319-93040-4_36}
   month={Apr},
   organization={ACM},
   presort={08},
-  rmdnote={pub=https://doi.org/10.1145/2883851.2883956}
+  rmdnote={pub=https://doi.org/10.1145/2883851.2883956},
+  ranknote={none}
 }
 
 @misc{he2016topicresponse,
@@ -454,7 +479,8 @@ rmdnote={pub=https://link.springer.com/chapter/10.1007/978-3-319-93040-4_36}
   pages={1749--1755},
   year={2015},
   presort={01},
-  rmdnote={pdf=http://www.aaai.org/Papers/AAAI/2015/13He.pdf}
+  rmdnote={pdf=http://www.aaai.org/Papers/AAAI/2015/13He.pdf},
+  ranknote={astar}
 }
 
 @inproceedings{lim2015submerge,
@@ -466,7 +492,8 @@ rmdnote={pub=https://link.springer.com/chapter/10.1007/978-3-319-93040-4_36}
   year={2015},
   month={Jan},
   presort={02},
-  rmdnote={pdf=http://www.aaai.org/Papers/AAAI/2015/13Lim.pdf;data=http://people.eng.unimelb.edu.au/brubinstein/data}
+  rmdnote={pdf=http://www.aaai.org/Papers/AAAI/2015/13Lim.pdf;data=http://people.eng.unimelb.edu.au/brubinstein/data},
+  ranknote={astar}
 }
 
 @article{zhang2015principled,
@@ -480,7 +507,8 @@ rmdnote={pub=https://link.springer.com/chapter/10.1007/978-3-319-93040-4_36}
   month={Apr},
   publisher={IEEE},
   presort={03},
-  rmdnote={full=https://arxiv.org/pdf/1402.0282;pub=http://ieeexplore.ieee.org/abstract/document/7095602/}
+  rmdnote={full=https://arxiv.org/pdf/1402.0282;pub=http://ieeexplore.ieee.org/abstract/document/7095602/},
+  ranknote={astar}
 }
 
 @incollection{rubinstein2015bounding,
@@ -506,7 +534,8 @@ rmdnote={pub=https://link.springer.com/chapter/10.1007/978-3-319-93040-4_36}
   month={Jul},
   publisher={Springer},
   presort={05},
-  rmdnote={pub=http://link.springer.com/article/10.1007/s10707-015-0228-8}
+  rmdnote={pub=http://link.springer.com/article/10.1007/s10707-015-0228-8},
+  ranknote={none}
 }
 
 @inproceedings{dimitrakakis2014robust,
@@ -519,7 +548,8 @@ rmdnote={pub=https://link.springer.com/chapter/10.1007/978-3-319-93040-4_36}
   month={Oct},
   organization={Springer},
   presort={01},
-  rmdnote={pdf=https://arxiv.org/pdf/1306.1066v3}
+  rmdnote={pdf=https://arxiv.org/pdf/1306.1066v3},
+  ranknote={b}
 }
 
 @incollection{biggio2014security,
@@ -558,7 +588,8 @@ rmdnote={pub=https://dl.acm.org/citation.cfm?id=2666652&picked=prox}
   month={Feb},
   publisher={VLDB Endowment},
   presort={01},
-  rmdnote={pdf=http://vldb.org/pvldb/vol5/p550_bozhao_vldb2012.pdf}
+  rmdnote={pdf=http://vldb.org/pvldb/vol5/p550_bozhao_vldb2012.pdf},
+  ranknote={astar}
 }
 
 @article{rubinstein2012on,
@@ -572,7 +603,8 @@ rmdnote={pub=https://dl.acm.org/citation.cfm?id=2666652&picked=prox}
   month={Jul},
   publisher={IEEE},
   presort={02},
-  rmdnote={pdf=https://arxiv.org/pdf/1002.2044}
+  rmdnote={pdf=https://arxiv.org/pdf/1002.2044},
+  ranknote={astar}
 }
 
 @article{nelson2012query,
@@ -585,7 +617,8 @@ rmdnote={pub=https://dl.acm.org/citation.cfm?id=2666652&picked=prox}
   pages={1293--1332},
   year={2012},
   presort={03},
-  rmdnote={pdf=http://www.jmlr.org/papers/v13/nelson12a.html}
+  rmdnote={pdf=http://www.jmlr.org/papers/v13/nelson12a.html},
+  ranknote={astar}
 }
 
 @article{rubinstein2012a,
@@ -598,7 +631,8 @@ rmdnote={pub=https://dl.acm.org/citation.cfm?id=2666652&picked=prox}
   pages={1221--1261},
   year={2012},
   presort={04},
-  rmdnote={pdf=http://www.jmlr.org/papers/volume13/rubinstein12a/rubinstein12a.pdf}
+  rmdnote={pdf=http://www.jmlr.org/papers/volume13/rubinstein12a/rubinstein12a.pdf},
+  ranknote={astar}
 }
 
 @article{rubinstein2012learning,
@@ -612,7 +646,8 @@ rmdnote={pub=https://dl.acm.org/citation.cfm?id=2666652&picked=prox}
   month={Aug},
   note={Special Issue on Statistical and Learning-Theoretic Challenges in Data Privacy},
   presort={05},
-  rmdnote={pdf=https://journalprivacyconfidentiality.org/index.php/jpc/article/view/612/595;full=https://arxiv.org/pdf/0911.5708}
+  rmdnote={pdf=https://journalprivacyconfidentiality.org/index.php/jpc/article/view/612/595;full=https://arxiv.org/pdf/0911.5708},
+  ranknote={none}
 }
 
 @article{barth2012a,
@@ -626,7 +661,8 @@ rmdnote={pub=https://dl.acm.org/citation.cfm?id=2666652&picked=prox}
   month={Jul},
   publisher={IEEE},
   presort={06},
-  rmdnote={pub=http://doi.ieeecomputersociety.org/10.1109/TDSC.2011.42}
+  rmdnote={pub=http://doi.ieeecomputersociety.org/10.1109/TDSC.2011.42},
+  ranknote={a}
 }
 
 @inproceedings{negahban2012scaling,
@@ -639,7 +675,8 @@ rmdnote={pub=https://dl.acm.org/citation.cfm?id=2666652&picked=prox}
   month={Oct},
   organization={ACM},
   presort={07},
-  rmdnote={full=http://arxiv.org/abs/1208.1860;pub=http://dx.doi.org/10.1145/2396761.2398606}
+  rmdnote={full=http://arxiv.org/abs/1208.1860;pub=http://dx.doi.org/10.1145/2396761.2398606},
+  ranknote={a}
 }
 
 @inproceedings{cardenas2012fifth,
@@ -677,7 +714,8 @@ rmdnote={pub=https://dl.acm.org/citation.cfm?id=2666652&picked=prox}
   month={Feb},
   organization={IEEE},
   presort={02},
-  rmdnote={pdf=https://arxiv.org/pdf/1102.4374}
+  rmdnote={pdf=https://arxiv.org/pdf/1102.4374},
+  ranknote={a}
 }
 
 @techreport{barth2011how,
@@ -725,7 +763,8 @@ rmdnote={pub=http://dl.acm.org/citation.cfm?id=2046684&coll=DL&dl=GUIDE&CFID=499
   pages={549--556},
   year={2010},
   presort={01},
-  rmdnote={pdf=http://jmlr.csail.mit.edu/proceedings/papers/v9/nelson10a/nelson10a.pdf}
+  rmdnote={pdf=http://jmlr.csail.mit.edu/proceedings/papers/v9/nelson10a/nelson10a.pdf},
+  ranknote={a}
 }
 
 @inproceedings{barth2010a,
@@ -736,7 +775,8 @@ rmdnote={pub=http://dl.acm.org/citation.cfm?id=2046684&coll=DL&dl=GUIDE&CFID=499
   pages={192--206},
   year={2010},
   presort={02},
-  rmdnote={pdf=https://people.eng.unimelb.edu.au/brubinstein/papers/react-short.pdf}
+  rmdnote={pdf=https://people.eng.unimelb.edu.au/brubinstein/papers/react-short.pdf},
+  ranknote={b}
 }
 
 @inproceedings{nelson2010classifier,
@@ -770,7 +810,8 @@ rmdnote={pub=http://dl.acm.org/citation.cfm?id=2046684&coll=DL&dl=GUIDE&CFID=499
   year={2009},
   organization={ACM},
   presort={01},
-  rmdnote={pdf=https://people.eng.unimelb.edu.au/brubinstein/papers/WWW09.pdf}
+  rmdnote={pdf=https://people.eng.unimelb.edu.au/brubinstein/papers/WWW09.pdf},
+  ranknote={astar}
 }
 
 @article{rubinstein2009shifting,
@@ -782,7 +823,8 @@ rmdnote={pub=http://dl.acm.org/citation.cfm?id=2046684&coll=DL&dl=GUIDE&CFID=499
   pages={37--59},
   year={2009},
   presort={02},
-  rmdnote={pdf=https://people.eng.unimelb.edu.au/brubinstein/papers/RBR07-JCSS.pdf;fix=https://people.eng.unimelb.edu.au/brubinstein/papers/JCSS09-erratum.pdf}
+  rmdnote={pdf=https://people.eng.unimelb.edu.au/brubinstein/papers/RBR07-JCSS.pdf;fix=https://people.eng.unimelb.edu.au/brubinstein/papers/JCSS09-erratum.pdf},
+  ranknote={astar}
 }
 
 @inproceedings{rubinstein2009antidote,
@@ -794,7 +836,8 @@ rmdnote={pub=http://dl.acm.org/citation.cfm?id=2046684&coll=DL&dl=GUIDE&CFID=499
   year={2009},
   organization={ACM},
   presort={03},
-  rmdnote={pdf=https://people.eng.unimelb.edu.au/brubinstein/papers/imc206-rubinstein.pdf}
+  rmdnote={pdf=https://people.eng.unimelb.edu.au/brubinstein/papers/imc206-rubinstein.pdf},
+  ranknote={a}
 }
 
 @article{rubinstein2009stealthy,
@@ -807,7 +850,8 @@ rmdnote={pub=http://dl.acm.org/citation.cfm?id=2046684&coll=DL&dl=GUIDE&CFID=499
   year={2009},
   publisher={ACM},
   presort={04},
-  rmdnote={pdf=https://people.eng.unimelb.edu.au/brubinstein/papers/RNHJLRTT09-SIGMETRICS09.pdf}
+  rmdnote={pdf=https://people.eng.unimelb.edu.au/brubinstein/papers/RNHJLRTT09-SIGMETRICS09.pdf},
+  ranknote={astar}
 }
 
 @incollection{nelson2009misleading,
@@ -839,7 +883,8 @@ rmdnote={full=http://repository.unimelb.edu.au/10187/5774}
   pages={299--310},
   year={2008},
   presort={01},
-  rmdnote={pdf=https://people.eng.unimelb.edu.au/brubinstein/papers/RR08-COLT08.pdf}
+  rmdnote={pdf=https://people.eng.unimelb.edu.au/brubinstein/papers/RR08-COLT08.pdf},
+  ranknote={astar}
 }
 
 @inproceedings{rubinstein2008evading,
@@ -850,7 +895,8 @@ rmdnote={full=http://repository.unimelb.edu.au/10187/5774}
   pages={394--395},
   year={2008},
   presort={02},
-  rmdnote={pdf=https://people.eng.unimelb.edu.au/brubinstein/papers/RNHJLTT08-RAID08.pdf;alert=Winner of RAID08 best poster award}
+  rmdnote={pdf=https://people.eng.unimelb.edu.au/brubinstein/papers/RNHJLTT08-RAID08.pdf;alert=Winner of RAID08 best poster award},
+  ranknote={a}
 }
 
 @inproceedings{nelson2008exploiting,
@@ -895,7 +941,8 @@ rmdnote={full=http://repository.unimelb.edu.au/10187/5774}
   pages={1193--1200},
   year={2007},
   presort={01},
-  rmdnote={pdf=http://papers.nips.cc/paper/2982-shifting-one-inclusion-mistake-bounds-and-tight-multiclass-expected-risk-bounds.pdf}
+  rmdnote={pdf=http://papers.nips.cc/paper/2982-shifting-one-inclusion-mistake-bounds-and-tight-multiclass-expected-risk-bounds.pdf},
+  ranknote={astar}
 }
 
 @proceedings{abraham2004proceedings,
@@ -943,7 +990,8 @@ rmdnote={pdf=http://auscc.bipr.net/auscc03}
   year={2001},
   organization={IEEE},
   presort={01},
-  rmdnote={pdf=https://people.eng.unimelb.edu.au/brubinstein/papers/cec01.pdf;alert=Winner of IEEE Computer Society's Lance Stafford Larson Scholarship for best undergraduate student paper worldwide}
+  rmdnote={pdf=https://people.eng.unimelb.edu.au/brubinstein/papers/cec01.pdf;alert=Winner of IEEE Computer Society's Lance Stafford Larson Scholarship for best undergraduate student paper worldwide},
+  ranknote={b}
 }
 
 
@@ -954,7 +1002,8 @@ rmdnote={pdf=http://auscc.bipr.net/auscc03}
   journal={Medical Journal of Australia},
   month={June},
   presort={02},
-  rmdnote={pub=https://doi.org/10.5694/mja2.50669}
+  rmdnote={pub=https://doi.org/10.5694/mja2.50669},
+  ranknote={astar}
 }
 
 @misc{culnane2020a,
@@ -976,7 +1025,8 @@ rmdnote={pdf=http://auscc.bipr.net/auscc03}
   number={2},
   pages={977-992},
   presort={03},
-  rmdnote={pub=http://dx.doi.org/10.1214/20-AOAS1326}
+  rmdnote={pub=http://dx.doi.org/10.1214/20-AOAS1326},
+  ranknote={astar}
 }
 
 @misc{marchant2020a,
@@ -1017,7 +1067,8 @@ rmdnote={pdf=http://auscc.bipr.net/auscc03}
   series={ASE},
   presort={08},
   note={Accepted},
-  rmdnote={code=https://github.com/Alan32Liu/Legion;pdf=https://arxiv.org/abs/2002.06311}
+  rmdnote={code=https://github.com/Alan32Liu/Legion;pdf=https://arxiv.org/abs/2002.06311},
+  ranknote={a}
 }
 
 @inproceedings{liu2020legion,
@@ -1029,7 +1080,8 @@ rmdnote={pdf=http://auscc.bipr.net/auscc03}
   note={Test-Comp session},
   pages={545--549},
   presort={09},
-  rmdnote={code=https://github.com/Alan32Liu/Legion;pub=https://link.springer.com/chapter/10.1007/978-3-030-45234-6_31}
+  rmdnote={code=https://github.com/Alan32Liu/Legion;pub=https://link.springer.com/chapter/10.1007/978-3-030-45234-6_31},
+  ranknote={b}
 }
 
 
@@ -1042,7 +1094,8 @@ rmdnote={pdf=http://auscc.bipr.net/auscc03}
   note={31st Australasian Database Conference},
   presort={10},
   pages={68--80},
-  rmdnote={pub=https://link.springer.com/book/10.1007/978-3-030-39469-1;alert=Best Student Paper Honorable Mention}
+  rmdnote={pub=https://link.springer.com/book/10.1007/978-3-030-39469-1;alert=Best Student Paper Honorable Mention},
+  ranknote={none}
 }
 
 @misc{yang2020characterizing,
@@ -1062,7 +1115,8 @@ rmdnote={pdf=http://auscc.bipr.net/auscc03}
   series={PAKDD},
   pages={152--163},
   presort={12},
-  rmdnote={full=https://arxiv.org/abs/2005.13787;pub=https://doi.org/10.1007/978-3-030-47436-2_12}
+  rmdnote={full=https://arxiv.org/abs/2005.13787;pub=https://doi.org/10.1007/978-3-030-47436-2_12},
+  ranknote={a}
 }
 
 @inproceedings{han2020adversarial,
@@ -1073,7 +1127,8 @@ rmdnote={pdf=http://auscc.bipr.net/auscc03}
   series={IJCNN},
   pages={1--8},
   presort={13},
-  rmdnote={full=https://arxiv.org/abs/1902.09062;pub=https://ieeexplore.ieee.org/abstract/document/9206634}
+  rmdnote={full=https://arxiv.org/abs/1902.09062;pub=https://ieeexplore.ieee.org/abstract/document/9206634},
+  ranknote={a}
 }
 
 @misc{gelbhart2020discrete,
@@ -1094,7 +1149,8 @@ rmdnote={pdf=http://auscc.bipr.net/auscc03}
   note={Accepted},
   year={2021},
   presort={01},
-  rmdnote={pdf=https://arxiv.org/abs/2011.00675}
+  rmdnote={pdf=https://arxiv.org/abs/2011.00675},
+  ranknote={astar}
 }
 
 @inproceedings{zhang2021improving,
@@ -1105,5 +1161,6 @@ rmdnote={pdf=http://auscc.bipr.net/auscc03}
   year={2021},
   note={Accepted},
   presort={02},
-  rmdnote={full=https://arxiv.org/abs/2006.15417}
+  rmdnote={full=https://arxiv.org/abs/2006.15417},
+  ranknote={astar}
 }
