--- a/bib/citations.bib
+++ b/bib/citations.bib
@@ -27,7 +27,7 @@
   title={Truth inference at scale: {A} {B}ayesian model for adjudicating highly redundant crowd annotations},
   author={Li, Yuan and Rubinstein, Benjamin I. P. and Cohn, Trevor},
   year={2019},
-  booktitle={Proceedings of the 2019 World Wide Web Conferece},
+  booktitle={Proceedings of the Web Conference 2019},
   series={WWW},
   pages={1028--1038},
   presort={02},
@@ -1144,7 +1144,7 @@ rmdnote={pdf=http://auscc.bipr.net/auscc03}
 @inproceedings{xu2021a,
   title={A Targeted Attack on Black-Box Neural Machine Translation with Parallel Data Poisoning},
   author={Chang Xu and Jun Wang and Yuqing Tang and Francisco Guzman and Benjamin I. P. Rubinstein and Trevor Cohn},
-  booktitle={Proceedings of the 2021 World Wide Web Conferece},
+  booktitle={Proceedings of the Web Conference 2021},
   series={WWW},
   note={Accepted},
   year={2021},
