--- a/bib/citations.bib
+++ b/bib/citations.bib
@@ -1039,16 +1039,6 @@ rmdnote={pdf=http://auscc.bipr.net/auscc03}
   rmdnote={pdf=https://arxiv.org/abs/2006.06963}
 }
 
-@misc{perera2020,
-  title={{DBA} bandits: Self-driving index tuning under ad-hoc, analytical workloads with safety guarantees},
-  author={R. Malinga Perera and Bastian Oetomo and Benjamin I. P. Rubinstein and Renata Borovica-Gajic},
-  note = {arXiv:2010.09208 [cs.DB]},
-  year={2020},
-  month={Oct},
-  presort={06},
-  rmdnote={pdf=https://arxiv.org/abs/2010.09208}
-}
-
 @misc{edwards2020a,
   title={A Graph Symmetrisation Bound on Channel Information Leakage under Blowfish Privacy},
   author={Tobias Edwards and Benjamin I. P. Rubinstein and Zuhe Zhang and Sanming Zhou},
@@ -1153,14 +1143,26 @@ rmdnote={pdf=http://auscc.bipr.net/auscc03}
   ranknote={astar}
 }
 
+@inproceedings{perera2020,
+  title={{DBA} bandits: Self-driving index tuning under ad-hoc, analytical workloads with safety guarantees},
+  booktitle={2021 IEEE 37th International Conference on Data Engineering},
+  series={ICDE},
+  author={R. Malinga Perera and Bastian Oetomo and Benjamin I. P. Rubinstein and Renata Borovica-Gajic},
+  note = {Accepted},
+  year={2021},
+  presort={02},
+  rmdnote={full=https://arxiv.org/abs/2010.09208},
+  ranknote={astar}
+}
+
 @inproceedings{zhang2021improving,
-  title={Improving Interpretability of {CNN} Models Using Non-Negative Concept Activation Vectors},
+  title={Invertible Concept-Based Explanations for CNN Models with Non-Negative Concept Activation Vectors},
   author={Zhang, Ruihan and Madumal, Prashan and Miller, Tim and Ehinger, Kris and Rubinstein, Benjamin},
   booktitle={Proceedings of the 35th AAAI Conference on Artificial Intelligence},
   series={AAAI},
   year={2021},
   note={Accepted},
-  presort={02},
+  presort={03},
   rmdnote={full=https://arxiv.org/abs/2006.15417},
   ranknote={astar}
 }
