--- a/bib/citations.bib
+++ b/bib/citations.bib
@@ -155,6 +155,7 @@ ranknote={a}
   booktitle={AAAI-18 Workshop on Artificial Intelligence for Cyber Security},
   series={AICS},
   year={2018},
+  pages={237--244},
   month={Jan},
   presort={08},
   rmdnote={pdf=https://arxiv.org/pdf/1704.01704}
@@ -345,6 +346,7 @@ ranknote={a}
   series={HERDSA},
   year={2017},
   month={Apr},
+  pages={392--401},
   presort={12},
   rmdnote={pdf=http://www.herdsa.org.au/system/files/Verkade_et_al_HERDSA2017.pdf;pub=http://www.herdsa.org.au/research-and-development-higher-education-vol-40-392}
 }
@@ -1000,7 +1002,10 @@ rmdnote={pdf=http://auscc.bipr.net/auscc03}
   year={2020},
   author={Leins, Kobi and Culnane, Chris and Rubinstein, Benjamin I. P.},
   journal={Medical Journal of Australia},
-  month={June},
+  month={July},
+  volume={213},
+  number={1},
+  pages = {6--8},
   presort={02},
   rmdnote={pub=https://doi.org/10.5694/mja2.50669},
   ranknote={astar}
@@ -1053,10 +1058,10 @@ rmdnote={pdf=http://auscc.bipr.net/auscc03}
   title={Legion: Best-First Concolic Testing},
   year={2020},
   author={Liu, Dongge and Ernst, Gidon and Murray, Toby and Rubinstein, Benjamin I. P.},
-  booktitle={The 35th IEEE/ACM International Conference on Automated Software Engineering},
+  booktitle={2020 35th IEEE/ACM International Conference on Automated Software Engineering},
   series={ASE},
   presort={08},
-  note={Accepted},
+  pages={54--65},
   rmdnote={code=https://github.com/Alan32Liu/Legion;pdf=https://arxiv.org/abs/2002.06311},
   ranknote={a}
 }
