--- a/bib/citations.bib
+++ b/bib/citations.bib
@@ -255,18 +255,6 @@ ranknote={a}
   ranknote={b}
 }
 
-@article{marchant2020dblink,
-  title={d-blink: Distributed End-to-End Bayesian Entity Resolution},
-  author={Marchant, Neil G. and Steorts, Rebecca C. and Kaplan, Andee and Rubinstein, Benjamin I. P. and Elazar, Daniel N.},
-  journal={Journal of Computational and Graphical Statistics},
-  year={2020},
-  month={Sep},
-  note={Accepted},
-  presort={00},
-  rmdnote={full=https://arxiv.org/abs/1909.06039;code=https://github.com/ngmarchant/dblink;pub=https://amstat.tandfonline.com/doi/full/10.1080/10618600.2020.1825451},
-  ranknote={astar}
-}
-
 @misc{culnane2019stop,
   title={Stop the Open Data Bus, We Want to Get Off},
   author={Culnane, Chris and Rubinstein, Benjamin I. P. and Teague, Vanessa},
@@ -1166,8 +1154,19 @@ rmdnote={pdf=http://auscc.bipr.net/auscc03}
   booktitle={Proceedings of the 35th AAAI Conference on Artificial Intelligence},
   series={AAAI},
   year={2021},
-  note={Accepted},
+  note={In press},
   presort={03},
   rmdnote={full=https://arxiv.org/abs/2006.15417},
+  ranknote={astar}
+}
+
+@article{marchant2020dblink,
+  title={d-blink: Distributed End-to-End Bayesian Entity Resolution},
+  author={Marchant, Neil G. and Steorts, Rebecca C. and Kaplan, Andee and Rubinstein, Benjamin I. P. and Elazar, Daniel N.},
+  journal={Journal of Computational and Graphical Statistics},
+  year={2021},
+  month={Feb},
+  presort={04},
+  rmdnote={full=https://arxiv.org/abs/1909.06039;code=https://github.com/ngmarchant/dblink;pub=https://www.tandfonline.com/doi/full/10.1080/10618600.2020.1825451},
   ranknote={astar}
 }
