--- a/bib/citations.bib
+++ b/bib/citations.bib
@@ -1148,6 +1148,28 @@ rmdnote={pdf=http://auscc.bipr.net/auscc03}
   ranknote={astar}
 }
 
+@article{marchant2020dblink,
+  title={d-blink: Distributed End-to-End Bayesian Entity Resolution},
+  author={Marchant, Neil G. and Steorts, Rebecca C. and Kaplan, Andee and Rubinstein, Benjamin I. P. and Elazar, Daniel N.},
+  journal={Journal of Computational and Graphical Statistics},
+  year={2021},
+  month={Feb},
+  presort={03},
+  rmdnote={full=https://arxiv.org/abs/1909.06039;code=https://github.com/ngmarchant/dblink;pub=https://www.tandfonline.com/doi/full/10.1080/10618600.2020.1825451},
+  ranknote={astar}
+}
+
+@inproceedings{weerasinghe2021closing,
+  title={Closing the {BIG-LID}: An Effective Local Intrinsic Dimensionality Defense for Nonlinear Regression Poisoning},
+  author={Weerasinghe, Sandamal and Rubinstein, Benjamin I. P. and Alpcan, Tansu and Erfani, Sarah and Leckie, Christopher and Abraham, Tamas},
+  booktitle={The 30th International Joint Conference on Artificial Intelligence},
+  series={IJCAI},
+  year={2021},
+  note={In press},
+  presort={04},
+  ranknote={astar}
+}
+
 @inproceedings{zhang2021improving,
   title={Invertible Concept-Based Explanations for CNN Models with Non-Negative Concept Activation Vectors},
   author={Zhang, Ruihan and Madumal, Prashan and Miller, Tim and Ehinger, Kris and Rubinstein, Benjamin},
@@ -1155,18 +1177,9 @@ rmdnote={pdf=http://auscc.bipr.net/auscc03}
   series={AAAI},
   year={2021},
   note={In press},
-  presort={03},
+  presort={05},
   rmdnote={full=https://arxiv.org/abs/2006.15417},
   ranknote={astar}
 }
 
-@article{marchant2020dblink,
-  title={d-blink: Distributed End-to-End Bayesian Entity Resolution},
-  author={Marchant, Neil G. and Steorts, Rebecca C. and Kaplan, Andee and Rubinstein, Benjamin I. P. and Elazar, Daniel N.},
-  journal={Journal of Computational and Graphical Statistics},
-  year={2021},
-  month={Feb},
-  presort={04},
-  rmdnote={full=https://arxiv.org/abs/1909.06039;code=https://github.com/ngmarchant/dblink;pub=https://www.tandfonline.com/doi/full/10.1080/10618600.2020.1825451},
-  ranknote={astar}
-}
+
