--- a/group.Rmd
+++ b/group.Rmd
@@ -11,12 +11,13 @@ I am fortunate to supervise a brilliant group of researchers.
 
 * [Neil Marchant](https://www.ngmarchant.net/) (2021-- ). Machine learning in privacy and databases.
 * [Chang Xu](https://changxu.io/) (w Cohn 2020-- ). Adversarial learning for NLP.
-* [Andrew Cullen](https://www.linkedin.com/in/andrew-cullen-67b04746/?originalSubdomain=au) (w Alpcan 2019-- ). Machine learning for spectrum management in contested environments.
+* [Andrew Cullen](https://www.linkedin.com/in/andrew-cullen-67b04746/?originalSubdomain=au) (2019-- ). Certified robustness.
 * [Sandamal Weerasinghe](https://cis.unimelb.edu.au/people/prameesha-weerasinghe) (w Leckie, Erfani, Alpcan 2019-- ). Adversarial machine learning.
 * [Shuo Zhou](https://shuozhou.github.io/) (w Tordesillas, Bailey, Bondell 2019-- ). Complex networks in materials science, cybersecurity.
 
 ### PhD students
 
+* [Zhuoqun (Calvin) Huang](https://github.com/Dovermore). (w Olya Ohrimenko 2021-- ). Topics in privacy, robustness, adaptive data analysis.
 * [Shijie Liu](https://www.linkedin.com/in/shijie-liu-9162b8151/). (w Sarah Erfani 2021-- ). Certified robustness.
 * [Jun Wang](https://www.linkedin.com/in/jun-wang-15065b170/). (w Trevor Cohn 2020-- ). Adversarial learning for NLP.
 * [Guoxin Sun](https://www.linkedin.com/in/guoxin-sun-338888162/). (w Tansu Alpcan, Seyit Camtepe 2020-- ). Distributed adversarial learning.
@@ -25,10 +26,10 @@ I am fortunate to supervise a brilliant group of researchers.
 * [Malinga Perera](http://www.malinga.me/) (w Renata Borovica-Gajic 2018-- ). Self-driving databases.
 * [Bastian Oetomo](https://www.linkedin.com/in/bastian-oetomo-34300856/) (w Renata Borovica-Gajic 2018-- ). Self-driving databases.
 * [Dongge Liu](https://www.linkedin.com/in/dongge-liu-9a957913a) (w Toby Murray, Thuan Pham, Gidon Ernst at LMU Munich 2018-- ). Software fuzzing with machine learning.
-* [Neil Marchant](https://www.ngmarchant.net/) (w Beka Steorts at Duke, Aurore Delaigle 2016-- ). Record linkage, adaptive importance sampling.
 
 ### PhD students---Completed
 
+* [Neil Marchant](https://www.ngmarchant.net/) (w Beka Steorts at Duke, Aurore Delaigle 2016--20). Bayesian record linkage, adaptive importance sampling for efficient evaluation → Postdoc at Univ Melbourne
 * [Leyla Roohi](https://au.linkedin.com/in/leyla-roohi-b4544a67) (w Vanessa Teague 2017--19). Secure storage and private querying for telecommunications metadata → Postdoc at Univ Melbourne
 * [Yuan Li](https://scholar.google.com/citations?user=qDDC09EAAAAJ&hl=en) (w Trevor Cohn 2015--19). Crowd sourcing, Bayesian optimisation, NLP → Postdoc at Univ Melbourne
 * [Lingjuan Lyu](https://www.researchgate.net/profile/Lingjuan_Lyu) (w Marimuthu Palaniswami 2016--18). Privacy in distributed sensing → Postdoc at the ANU
