--- a/bib/citations.bib
+++ b/bib/citations.bib
@@ -1126,7 +1126,7 @@ rmdnote={pdf=http://auscc.bipr.net/auscc03}
 
 @inproceedings{xu2021a,
   title={A Targeted Attack on Black-Box Neural Machine Translation with Parallel Data Poisoning},
-  author={Chang Xu and Jun Wang and Yuqing Tang and Francisco Guzman and Benjamin I. P. Rubinstein and Trevor Cohn},
+  author={Chang Xu and Jun Wang and Yuqing Tang and Francisco Guzm\'{a}n and Benjamin I. P. Rubinstein and Trevor Cohn},
   booktitle={Proceedings of the Web Conference 2021},
   series={WWW},
   note={Accepted},
@@ -1182,4 +1182,20 @@ rmdnote={pdf=http://auscc.bipr.net/auscc03}
   ranknote={astar}
 }
 
+@inproceedings{wang2021putting,
+  title={Putting words into the system's mouth: A targeted attack on neural machine translation using monolingual data poisoning},
+  author={Wang, Jun and Xu, Chang and Guzm\'{a}n, Francisco and El-Kishky, Ahmed and Tang, Yuqing and Rubinstein, Benjamin I. P. and Cohn, Trevor},
+  year={2021},
+  booktitle={Findings of ACL},
+  note={Accepted},
+  presort={06}
+}
 
+@inproceedings{xu2021as,
+  title={As Easy as 1, 2, 3: Behavioural Testing of {NMT} Systems for Numerical Translation},
+  author={Wang, Jun and Xu, Chang and Guzm\'{a}n, Francisco and El-Kishky, Ahmed and Tang, Yuqing and Rubinstein, Benjamin I. P. and Cohn, Trevor},
+  year={2021},
+  booktitle={Findings of ACL},
+  note={Accepted},
+  presort={07}
+}
