--- a/bib/citations.bib
+++ b/bib/citations.bib
@@ -1022,16 +1022,6 @@ rmdnote={pdf=http://auscc.bipr.net/auscc03}
   ranknote={astar}
 }
 
-@misc{marchant2020a,
-  title={A general framework for label-efficient online evaluation with asymptotic guarantees},
-  author={Neil G. Marchant and Benjamin I. P. Rubinstein},
-  note = {arXiv:2006.06963 [cs.LG]},
-  year={2020},
-  month={Jun},
-  presort={05},
-  rmdnote={pdf=https://arxiv.org/abs/2006.06963}
-}
-
 @misc{edwards2020a,
   title={A Graph Symmetrisation Bound on Channel Information Leakage under Blowfish Privacy},
   author={Tobias Edwards and Benjamin I. P. Rubinstein and Zuhe Zhang and Sanming Zhou},
@@ -1124,6 +1114,17 @@ rmdnote={pdf=http://auscc.bipr.net/auscc03}
   rmdnote={pdf=https://arxiv.org/abs/2006.13120}
 }
 
+@inproceedings{marchant2021needle,
+  title={Needle in a Haystack: Label-Efficient Evaluation under Extreme Class Imbalance},
+  author={Neil G. Marchant and Benjamin I. P. Rubinstein},
+  booktitle={Proceedings of the 27th ACM SIGKDD International Conference on Knowledge Discovery \& Data Mining},
+  series={KDD},
+  year={2021},
+  note={Accepted},
+  presort={01},
+  rmdnote={full=https://arxiv.org/abs/2006.06963}
+}
+
 @inproceedings{xu2021a,
   title={A Targeted Attack on Black-Box Neural Machine Translation with Parallel Data Poisoning},
   author={Chang Xu and Jun Wang and Yuqing Tang and Francisco Guzm\'{a}n and Benjamin I. P. Rubinstein and Trevor Cohn},
@@ -1131,7 +1132,7 @@ rmdnote={pdf=http://auscc.bipr.net/auscc03}
   series={WWW},
   note={Accepted},
   year={2021},
-  presort={01},
+  presort={02},
   rmdnote={pdf=https://arxiv.org/abs/2011.00675},
   ranknote={astar}
 }
@@ -1143,7 +1144,7 @@ rmdnote={pdf=http://auscc.bipr.net/auscc03}
   author={R. Malinga Perera and Bastian Oetomo and Benjamin I. P. Rubinstein and Renata Borovica-Gajic},
   note = {Accepted},
   year={2021},
-  presort={02},
+  presort={03},
   rmdnote={full=https://arxiv.org/abs/2010.09208},
   ranknote={astar}
 }
@@ -1154,7 +1155,7 @@ rmdnote={pdf=http://auscc.bipr.net/auscc03}
   journal={Journal of Computational and Graphical Statistics},
   year={2021},
   month={Feb},
-  presort={03},
+  presort={04},
   rmdnote={full=https://arxiv.org/abs/1909.06039;code=https://github.com/ngmarchant/dblink;pub=https://www.tandfonline.com/doi/full/10.1080/10618600.2020.1825451},
   ranknote={astar}
 }
@@ -1166,7 +1167,7 @@ rmdnote={pdf=http://auscc.bipr.net/auscc03}
   series={IJCAI},
   year={2021},
   note={In press},
-  presort={04},
+  presort={05},
   ranknote={astar}
 }
 
@@ -1177,7 +1178,7 @@ rmdnote={pdf=http://auscc.bipr.net/auscc03}
   series={AAAI},
   year={2021},
   note={In press},
-  presort={05},
+  presort={06},
   rmdnote={full=https://arxiv.org/abs/2006.15417},
   ranknote={astar}
 }
@@ -1188,7 +1189,7 @@ rmdnote={pdf=http://auscc.bipr.net/auscc03}
   year={2021},
   booktitle={Findings of ACL},
   note={Accepted},
-  presort={06}
+  presort={07}
 }
 
 @inproceedings{xu2021as,
@@ -1197,5 +1198,5 @@ rmdnote={pdf=http://auscc.bipr.net/auscc03}
   year={2021},
   booktitle={Findings of ACL},
   note={Accepted},
-  presort={07}
+  presort={08}
 }
