github back up - ampersand

--- a/bib/citations.bib
+++ b/bib/citations.bib
@@ -1117,7 +1117,7 @@ rmdnote={pdf=http://auscc.bipr.net/auscc03}
 @inproceedings{marchant2021needle,
   title={Needle in a Haystack: Label-Efficient Evaluation under Extreme Class Imbalance},
   author={Neil G. Marchant and Benjamin I. P. Rubinstein},
-  booktitle={Proceedings of the 27th ACM SIGKDD International Conference on Knowledge Discovery and Data Mining},
+  booktitle={Proceedings of the 27th ACM SIGKDD International Conference on Knowledge Discovery \& Data Mining},
   series={KDD},
   year={2021},
   note={Accepted},
