--- a/bib/citations.bib
+++ b/bib/citations.bib
@@ -288,7 +288,7 @@ ranknote={a}
   year={2017},
   organization={IEEE},
   presort={08},
-  rmdnote={pdf=http://www.buyya.com/papers/E-Storm2017.pdf;pub=https://ieeexplore.ieee.org/document/8025331/},
+  rmdnote={pdf=https://drive.google.com/file/d/19dHJf_VuyZ5QK43qdkNi73JEu2JtiT09/view?usp=sharing;pub=https://ieeexplore.ieee.org/document/8025331/},
   ranknote={a}
 }
 
