--- a/bib/citations.bib
+++ b/bib/citations.bib
@@ -1190,7 +1190,8 @@ rmdnote={pdf=http://auscc.bipr.net/auscc03}
   year={2021},
   booktitle={Findings of ACL},
   note={Accepted},
-  presort={07}
+  presort={07},
+  rmdnote={code=https://github.com/JunW15/Monolingual-Attack}
 }
 
 @inproceedings{xu2021as,
