--- a/bib/citations.bib
+++ b/bib/citations.bib
@@ -980,7 +980,7 @@ rmdnote={pdf=http://auscc.bipr.net/auscc03}
   year={2001},
   organization={IEEE},
   presort={01},
-  rmdnote={pdf=https://people.eng.unimelb.edu.au/brubinstein/papers/cec01.pdf;alert=Winner of IEEE Computer Society's Lance Stafford Larson Scholarship for best undergraduate student paper worldwide},
+  rmdnote={pdf=papers/cec01.pdf;alert=Winner of IEEE Computer Society's Lance Stafford Larson Scholarship for best undergraduate student paper worldwide},
   ranknote={b}
 }
 
