--- a/bib/citations.bib
+++ b/bib/citations.bib
@@ -691,7 +691,7 @@ rmdnote={pub=https://dl.acm.org/citation.cfm?id=2666652&picked=prox}
   month={Oct},
   organization={ACM},
   presort={01},
-  rmdnote={pdf=https://people.eng.unimelb.edu.au/brubinstein/papers/aisec2011-camera-ready.pdf}
+  rmdnote={pdf=papers/aisec2011-camera-ready.pdf}
 }
 
 @inproceedings{narayanan2011link,
@@ -765,7 +765,7 @@ rmdnote={pub=http://dl.acm.org/citation.cfm?id=2046684&coll=DL&dl=GUIDE&CFID=499
   pages={192--206},
   year={2010},
   presort={02},
-  rmdnote={pdf=https://people.eng.unimelb.edu.au/brubinstein/papers/react-short.pdf},
+  rmdnote={pdf=papers/react-short.pdf},
   ranknote={b}
 }
 
@@ -777,7 +777,7 @@ rmdnote={pub=http://dl.acm.org/citation.cfm?id=2046684&coll=DL&dl=GUIDE&CFID=499
   pages={92--98},
   year={2010},
   presort={03},
-  rmdnote={pdf=https://people.eng.unimelb.edu.au/brubinstein/papers/ecml2010.pdf}
+  rmdnote={pdf=papers/ecml2010.pdf}
 }
 
 @phdthesis{rubinstein2010secure,
@@ -800,7 +800,7 @@ rmdnote={pub=http://dl.acm.org/citation.cfm?id=2046684&coll=DL&dl=GUIDE&CFID=499
   year={2009},
   organization={ACM},
   presort={01},
-  rmdnote={pdf=https://people.eng.unimelb.edu.au/brubinstein/papers/WWW09.pdf},
+  rmdnote={pdf=papers/WWW09.pdf},
   ranknote={astar}
 }
 
@@ -813,7 +813,7 @@ rmdnote={pub=http://dl.acm.org/citation.cfm?id=2046684&coll=DL&dl=GUIDE&CFID=499
   pages={37--59},
   year={2009},
   presort={02},
-  rmdnote={pdf=https://people.eng.unimelb.edu.au/brubinstein/papers/RBR07-JCSS.pdf;fix=https://people.eng.unimelb.edu.au/brubinstein/papers/JCSS09-erratum.pdf},
+  rmdnote={pdf=papers/RBR07-JCSS.pdf;fix=papers/JCSS09-erratum.pdf},
   ranknote={astar}
 }
 
@@ -826,7 +826,7 @@ rmdnote={pub=http://dl.acm.org/citation.cfm?id=2046684&coll=DL&dl=GUIDE&CFID=499
   year={2009},
   organization={ACM},
   presort={03},
-  rmdnote={pdf=https://people.eng.unimelb.edu.au/brubinstein/papers/imc206-rubinstein.pdf},
+  rmdnote={pdf=papers/imc206-rubinstein.pdf},
   ranknote={a}
 }
 
@@ -840,7 +840,7 @@ rmdnote={pub=http://dl.acm.org/citation.cfm?id=2046684&coll=DL&dl=GUIDE&CFID=499
   year={2009},
   publisher={ACM},
   presort={04},
-  rmdnote={pdf=https://people.eng.unimelb.edu.au/brubinstein/papers/RNHJLRTT09-SIGMETRICS09.pdf},
+  rmdnote={pdf=papers/RNHJLRTT09-SIGMETRICS09.pdf},
   ranknote={astar}
 }
 
@@ -873,7 +873,7 @@ rmdnote={full=http://repository.unimelb.edu.au/10187/5774}
   pages={299--310},
   year={2008},
   presort={01},
-  rmdnote={pdf=https://people.eng.unimelb.edu.au/brubinstein/papers/RR08-COLT08.pdf},
+  rmdnote={pdf=papers/RR08-COLT08.pdf},
   ranknote={astar}
 }
 
@@ -885,7 +885,7 @@ rmdnote={full=http://repository.unimelb.edu.au/10187/5774}
   pages={394--395},
   year={2008},
   presort={02},
-  rmdnote={pdf=https://people.eng.unimelb.edu.au/brubinstein/papers/RNHJLTT08-RAID08.pdf;alert=Winner of RAID08 best poster award},
+  rmdnote={pdf=papers/RNHJLTT08-RAID08.pdf;alert=Winner of RAID08 best poster award},
   ranknote={a}
 }
 
@@ -897,7 +897,7 @@ rmdnote={full=http://repository.unimelb.edu.au/10187/5774}
   pages={1--9},
   year={2008},
   presort={03},
-  rmdnote={pdf=https://people.eng.unimelb.edu.au/brubinstein/papers/leet08.pdf}
+  rmdnote={pdf=papers/leet08.pdf}
 }
 
 @inproceedings{barreno2008open,
@@ -909,7 +909,7 @@ rmdnote={full=http://repository.unimelb.edu.au/10187/5774}
   year={2008},
   organization={ACM},
   presort={04},
-  rmdnote={pdf=https://people.eng.unimelb.edu.au/brubinstein/papers/BBCJNRST08-AISEC08.pdf}
+  rmdnote={pdf=papers/BBCJNRST08-AISEC08.pdf}
 }
 
 @techreport{rubinstein2008compromising,
@@ -968,7 +968,7 @@ rmdnote={pdf=http://auscc.bipr.net/auscc03}
   publisher={ACM},
   note={Special Issue on Microarray Data Mining},
   presort={02},
-  rmdnote={pdf=https://people.eng.unimelb.edu.au/brubinstein/papers/sigkdd03.pdf}
+  rmdnote={pdf=papers/sigkdd03.pdf}
 }
 
 @inproceedings{rubinstein2001evolving,
