--- a/group.Rmd
+++ b/group.Rmd
@@ -17,6 +17,7 @@ I am fortunate to supervise a brilliant group of researchers.
 
 ### PhD students
 
+* Jiankai Jin. (w Olya Ohrimenko 2021-- ). Multi-party machine learning.
 * [Zhuoqun (Calvin) Huang](https://github.com/Dovermore). (w Olya Ohrimenko 2021-- ). Topics in privacy, robustness, adaptive data analysis.
 * [Shijie Liu](https://www.linkedin.com/in/shijie-liu-9162b8151/). (w Sarah Erfani 2021-- ). Certified robustness.
 * [Jun Wang](https://www.linkedin.com/in/jun-wang-15065b170/). (w Trevor Cohn 2020-- ). Adversarial learning for NLP.
