--- a/bib/citations.bib
+++ b/bib/citations.bib
@@ -1122,7 +1122,7 @@ rmdnote={pdf=http://auscc.bipr.net/auscc03}
   year={2021},
   note={Accepted},
   presort={01},
-  rmdnote={full=https://arxiv.org/abs/2006.06963},
+  rmdnote={full=https://arxiv.org/abs/2006.06963;code=https://github.com/ngmarchant/activeeval},
   ranknote={astar}
 }
 
