--- a/bib/citations.bib
+++ b/bib/citations.bib
@@ -1155,7 +1155,9 @@ rmdnote={pdf=http://auscc.bipr.net/auscc03}
   author={Marchant, Neil G. and Steorts, Rebecca C. and Kaplan, Andee and Rubinstein, Benjamin I. P. and Elazar, Daniel N.},
   journal={Journal of Computational and Graphical Statistics},
   year={2021},
-  month={Feb},
+  pages={406--421},
+  volume={30},
+  number={2},
   presort={04},
   rmdnote={full=https://arxiv.org/abs/1909.06039;code=https://github.com/ngmarchant/dblink;pub=https://www.tandfonline.com/doi/full/10.1080/10618600.2020.1825451},
   ranknote={astar}
