--- a/bib/citations.bib
+++ b/bib/citations.bib
@@ -1204,3 +1204,12 @@ rmdnote={pdf=http://auscc.bipr.net/auscc03}
   note={Accepted},
   presort={08}
 }
+
+@inproceedings{Sun2021strategic,
+  title={Strategic mitigation against wireless attacks on autonomous platoons},
+  author={Guoxin Sun and Tansu Alpcan and Benjamin I. P. Rubinstein and Seyit Camtepe},
+  year={2021},
+  booktitle={Joint European Conference on Machine Learning and Knowledge Discovery in Databases},
+  series={ECML-PKDD},
+  presort={09}
+}
