icml19 ebcc code

--- a/bib/citations.bib
+++ b/bib/citations.bib
@@ -19,7 +19,7 @@
   pages={3886--3895},
   publisher={PMLR},
   presort={01},
-  rmdnote={pdf=http://proceedings.mlr.press/v97/li19i.html},
+  rmdnote={pdf=http://proceedings.mlr.press/v97/li19i.html;code=https://github.com/yuan-li/truth-inference-at-scale},
   ranknote={astar}
 }
 
